fix: links not wrapping on posts and prevents the creation of single pages for  my custom post types.

--- a/wp-content/themes/carlos_website/css/tailwind.css
+++ b/wp-content/themes/carlos_website/css/tailwind.css
@@ -138,10 +138,15 @@
   .article-content pre {
     @apply my-4;
   }
+  .article-content p {
+    @apply text-wrap;
+    @apply break-words;
 
-  .article-content p a {
-    @apply text-blue-500
   }
+  .article-content p a {
+    @apply text-blue-500;
+  }
+
   .article-content p a:hover {
     @apply underline;
   }
